# backend-innovar

./: .env  .env_exemplo  .pdm-python  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
innovar/: admin.py  apps.py  models.py  serializers.py  validators.py  views.py
innovar/migrations/: 0001_initial.py  0002_profissional_gerente_cliente_atendente.py  0002_remove_chavepermissao_cpf_superior_and_more.py  0002_remove_horariobloqueado_atendentes_cliente_cpf_and_more.py  0003_alter_cliente_cpf_alter_cliente_numero_telefone.py  0003_remove_desconto_aplicado_por_and_more.py  0004_alter_usuariocustomizado_options_and_more.py  0004_cliente_cpf_cliente_numero_telefone.py  0005_remove_cliente_cpf_remove_cliente_numero_telefone.py  0006_cliente_cpf_cliente_numero_telefone.py  0007_alter_cliente_cpf_alter_cliente_idade_and_more.py  0008_remove_cliente_usuario_usuariocustomizado_idade_and_more.py  0009_remove_usuariocustomizado_eh_atendente_and_more.py  0010_usuariocustomizado_eh_atendente_and_more.py  0011_clientepacote_sessoes_completas_and_more.py  0012_pacote_clientes_procedimento_clientes_and_more.py  0013_remove_pacote_clientes_remove_procedimento_clientes_and_more.py  0014_alter_clientepacote_cliente_and_more.py  0015_alter_clientepacote_unique_together_and_more.py  0016_desconto.py  0017_desconto_cpf_superior.py  0018_remove_desconto_cpf_superior_remove_desconto_pacotes_and_more.py  0019_alter_desconto_tipo_desconto.py  0020_alter_desconto_cliente.py  0021_delete_desconto.py  (+4 more)
utils/: files.py
(+19 files in other folders)
